Layout updates and fixes (#4616)
### Description

This PR contains the following fixes and updates

* The layout of the places pages have been updated to display correctly
within the new overall layout.
* The arrows in the desktop menu have been made larger (P1)
* Padding update inside searchbox (P2)
* Left margin fix on the footer (P2)

---------

--- a/static/css/core.scss
+++ b/static/css/core.scss
@@ -168,6 +168,18 @@ section {
               color: #474747;
               transition: color 0.3s ease-in-out;
             }
+            .menu-arrow-icon {
+              margin: 0;
+              padding: 0;
+              display: inline-block;
+              transition: transform 0.3s ease;
+              font-size: 1.45rem;
+              transform: translateY(1px);
+            }
+
+            .menu-arrow-icon.open {
+              transform: rotate(180deg);
+            }
           }
 
           .menu-main-link {
@@ -184,15 +196,6 @@ section {
               color: #0b57d0;
               text-decoration: none;
             }
-          }
-
-          .menu-arrow-icon {
-            display: inline-block;
-            transition: transform 0.3s ease;
-          }
-
-          .menu-arrow-icon.open {
-            transform: rotate(180deg);
           }
         }
       }
@@ -597,10 +600,10 @@ section {
 
       #rich-search-button {
         cursor: pointer;
-        opacity: 0;
+        opacity: 1;
         display: flex;
         align-items: center;
-        color: #0b57d0;
+        color: #f1f1f1;
       }
 
       .search-input-text {
@@ -618,6 +621,9 @@ section {
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .search-input-text:focus {
@@ -644,17 +650,23 @@ section {
   .search-bar.non-empty:focus-within {
     #rich-search-button {
       opacity: 1;
+      color: #0b57d0;
     }
   }
 }
 
 // Needs refactor this overrides current styles
 #main-footer-container {
-  padding: 14px 0 !important;
+  padding: 16px 0 !important;
   .container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 0  32px !important;
+    max-width: 1920px !important;
+    @include media-breakpoint-down(lg) {
+      padding: 0 24px !important;
+    }
     @include media-breakpoint-down(sm) {
       justify-content: center;
       gap: 24px;
